# OS_HW2

./: CMakeLists.txt
Grade10/: README.md  client.c  client.out  hotel.c  hotel.out
Grade4/: README.md  main.c
Grade5/: README.md  main.c
Grade6/: README.md  main.c
Grade7/: README.md  client.c  client.out  hotel.c  hotel.out
Grade8/: README.md  client.c  client.out  hotel.c  hotel.out
Grade9/: README.md  client.c  client.out  hotel.c  hotel.out
tests/: clients.txt
